--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
 	},
 	"dependencies": {
 		"@macfja/svelte-p5": "^1.2.0",
+		"@sveltejs/adapter-static": "^3.0.10",
 		"@tailwindcss/vite": "^4.1.18",
+		"gh-pages": "^6.3.0",
 		"tailwindcss": "^4.1.18"
 	}
 }
